# GTOpen

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  log  start.sh
.playwright-mcp/: page-2026-07-16T04-01-17-444Z.yml
bench/: baseline_f32_dcfr.time  gpu_f32_dcfr.time  make_chart.py  new_f32_dcfr.time  new_i16_dcfr.time  new_i16_pcfr.time  results.json
cache/: realization_fit.json
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/solver/: Cargo.toml
crates/solver/src/: best_response.rs  cards.rs  cfr.rs  evaluator.rs  game.rs  lib.rs  query.rs  range.rs  save.rs  scratch.rs  store.rs  tree.rs
crates/solver/src/gpu/: kernels.cu  mod.rs  plan.rs
crates/solver/src/preflop/: equity.rs  gpu.rs  kernels.cu  mod.rs  save.rs
crates/solver/tests/: build_validation.rs  convergence.rs  gpu.rs  gpu_bench.rs  postflop_profile.rs  preflop.rs  preflop_bench.rs  preflop_gpu.rs  realization.rs  save_atomic.rs
m5_out/: flops_mini.txt  manifest.json  obs_mini_3max__btn_open_bb_call.jsonl  obs_mini_3max__sb_limp_bb_check.jsonl
m5_out/spots/: mini_3max__btn_open_bb_call.json  mini_3max__sb_limp_bb_check.json
m5_spots/: README.md  fit_phase_c.py  phase_b.py  pilot_small.json  srp_btn_bb_100bb.json
web/: index.html
web/css/: app.css
web/js/: api.js  app.js  browse.js  cards.js  classify.js  preflop.js  preflop_lab.js  range_editor.js  reports.js  tooltip.js
