[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gto-server"
path = "src/main.rs"

[dependencies]
solver = { path = "../solver" }
rayon = "1.10"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
gpu = ["solver/gpu"]
