[package]
name = "solver"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mimalloc = "0.1"
cudarc = { version = "0.19", default-features = false, features = [
    "driver",
    "nvrtc",
    "dynamic-loading",
    "cuda-12060",
], optional = true }

[[bin]]
name = "solve-cli"
path = "src/bin/solve_cli.rs"

[features]
gpu = ["dep:cudarc"]
